sidebar: fix sidepanel partially visible in slim mode

--- a/client/src/components/Sidebar/SidebarPanel.scss
+++ b/client/src/components/Sidebar/SidebarPanel.scss
@@ -31,9 +31,6 @@
     &--open {
         left: $menu-width;
 
-        @at-root .sidebar--slim #{&} {
-            left: $menu-width-slim;
-        }
         // Don't apply this to nested submenus though
         @at-root .sidebar--slim .sidebar-panel #{&} {
             left: $menu-width;
